Increased amount of memory available to maven for compilation and added -DfailIfNoTests=false to allow for the running of individual tests for debugging purposes.